--- a/portfolio.html
+++ b/portfolio.html
@@ -1463,8 +1463,8 @@
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-content">
             <div class="mobile-menu-header">
-                <div class="mobile-menu-title">Complete Business Team</div>
-                <div class="mobile-menu-subtitle">Professional automation platform with dedicated staff working 24/7</div>
+                <div class="mobile-menu-title">Digital Solutions</div>
+                <div class="mobile-menu-subtitle">Branded websites, social content systems, and CRM automation for local businesses</div>
             </div>
             
             <nav class="mobile-navigation">
@@ -1479,10 +1479,10 @@
             
             <div class="mobile-menu-footer">
                 <div class="mobile-contact-info">
-                    <a href="tel:+14238555055" class="mobile-phone">(423) 855-5055</a>
-                    <div class="mobile-menu-subtitle">Ready to automate your business operations?</div>
+                    <a href="tel:+16505865889" class="mobile-phone">(650) 586-5889</a>
+                    <div class="mobile-menu-subtitle">Ready to grow your local business online?</div>
                 </div>
-                <a href="contact.html" class="mobile-cta">Get Your Business Team Today</a>
+                <a href="contact.html" class="mobile-cta">Get Your Digital Solutions Today</a>
             </div>
         </div>
     </div>
