--- a/services.html
+++ b/services.html
@@ -1395,7 +1395,7 @@
             
             <div class="mobile-menu-footer">
                 <div class="mobile-contact-info">
-                    <a href="tel:+16505865889" class="mobile-phone">(650) 586-5889</a>
+                    <a href="tel:+14238555055" class="mobile-phone">(423) 855-5055</a>
                     <div class="mobile-menu-subtitle">Ready to grow your local business online?</div>
                 </div>
                 <a href="contact.html" class="mobile-cta">Get Your Digital Solutions Today</a>
@@ -1612,7 +1612,7 @@
                     <h3>Contact Info</h3>
                     <p>📧 info@sentinelpeaksolutions.com</p>
                     <p>📞 (650) 586-5889</p>
-                    <p>📍 Fresno, CA</p>
+                    <p>📍 Fresno</p>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -1622,7 +1622,8 @@
     </footer>
 
     <script>
-        // Add scroll effect to navigation
+        // A
+        //dd scroll effect to navigation
         window.addEventListener('scroll', function() {
             const navbar = document.getElementById('navbar');
             if (window.scrollY > 100) {
