--- a/index.html
+++ b/index.html
@@ -2247,7 +2247,7 @@
             <div class="mobile-menu" id="mobileMenu">
                 <div class="mobile-menu-content">
                     <div class="mobile-menu-header">
-                        <div class="mobile-menu-title">Complete Business Team</div>
+                        <div class="mobile-menu-title">Sentinel Peak Solutions</div>
                         <div class="mobile-menu-subtitle">Professional automation platform working 24/7 for your business</div>
                     </div>
                     
