--- a/portfolio.html
+++ b/portfolio.html
@@ -955,6 +955,10 @@
         .portfolio-image.luxury-artisan::before {
             background-image: url('images/luxury-artisan-cutlery-website.png');
         }
+        
+        .portfolio-image.wrap-my-ride::before {
+            background-image: url('images/wrap-my-ride-logo.jpg');
+        }
 
         .portfolio-content {
             padding: 2rem;
@@ -1597,6 +1601,25 @@
                     </div>
                 </div>
 
+                <!-- FEATURED: Wrap My Ride Fresno -->
+                <div class="portfolio-item scale-in">
+                    <div class="portfolio-image wrap-my-ride" style="color: #fff; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 600;" alt="Wrap My Ride Fresno website with booking automation and customer dashboard by Sentinel Peak Solutions">
+                        Complete Business Automation
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="portfolio-category">Automotive Services</div>
+                        <h3>Wrap My Ride Fresno – Complete Digital Transformation</h3>
+                        <p>Beyond building wrapmyridefresno.com, we integrated a comprehensive booking system with automated no-show reduction, unified social media management, and a customer dashboard. The owner now wakes up to scheduled appointments instead of missed calls, while customers book services 24/7 through automated workflows.</p>
+                        <div class="portfolio-tags">
+                            <span class="tag">✅ Calendar booking integration (eliminates phone tag)</span>
+                            <span class="tag">✅ No-show reduction automation (saves time & money)</span>
+                            <span class="tag">✅ Social media content creation & posting</span>
+                            <span class="tag">✅ Unified customer dashboard (all communications in one place)</span>
+                        </div>
+                        <a href="https://wrapmyridefresno.com" target="_blank" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+
                 <!-- Dental Clinic -->
                 <div class="portfolio-item scale-in stagger-1">
                     <div class="portfolio-image dental" style="background: url('images/dental-website-laptop.png') center/cover; color: #fff; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 600;">
@@ -1797,10 +1820,10 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="services.html">Fast Launch Program - $2,497 setup</a></li>
-                        <li><a href="services.html">Growth Accelerator - $3,497 setup</a></li>
-                        <li><a href="services.html">Market Dominator - $4,997 setup</a></li>
-                        <li><a href="services.html">CRM Integration</a></li>
+                        <li><a href="services.html">Branded Websites - Starting at $1,000</a></li>
+                        <li><a href="services.html">Social Content Systems - $399/month</a></li>
+                        <li><a href="services.html">CRM & Automation - $249/month</a></li>
+                        <li><a href="services.html">Custom Solutions</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
