--- a/thankyou.html
+++ b/thankyou.html
@@ -817,9 +817,9 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="services.html">Fast Launch Program - $2,497 setup</a></li>
-                        <li><a href="services.html">Growth Accelerator - $3,497 setup</a></li>
-                        <li><a href="services.html">Market Dominator - $4,997 setup</a></li>
+                        <li><a href="services.html">Branded Websites - Starting at $1,000</a></li>
+                        <li><a href="services.html">Social Content Systems - $399/month</a></li>
+                        <li><a href="services.html">CRM & Automation - $249/month</a></li>
                         <li><a href="services.html">CRM Integration</a></li>
                     </ul>
                 </div>
